# ssd1306

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  build.sh  circle.yml  font6x8_data.b64  font6x8_data.raw  font6x8_widths.b64  memory.x  release.toml  rust-toolchain.toml  rust.raw  rustfmt.nightly.toml
.cargo/: config  config.toml
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  ci.yml
.github/workflows/: ci.yml
ci/: script.sh
examples/: app.rs  async_i2c_spi.rs  async_terminal_i2c.rs  blinky.rs  blinky.rs.outdated  blinky_i2c.rs  blinky_i2c.rs.outdated  bmp_i2c.rs  character_i2c.rs  drawable.rs  drawable_i2c.rs  graphics.rs  graphics_i2c.rs  graphics_i2c_128x32.rs  graphics_i2c_72x40.rs  i2c.rs  image_i2c.rs  noise_i2c.rs  pixelsquare.rs  primitives.rs  rotation_i2c.rs  rtfm_brightness.rs  rtfm_dvd.rs  rtic_brightness.rs  rtic_dvd.rs  single_task.rs  terminal_i2c.rs  text_i2c.rs  text_raspberry_pi.rs
examples/raspi/: Cargo.toml  README.md  rust.raw
examples/raspi/.github/workflows/: build-raspi.yaml
examples/raspi/src/: main.rs
src/: brightness.rs  builder.rs  command.rs  displayrotation.rs  displaysize.rs  egfx.rs  error.rs  i2c_builder.rs  i2c_interface.rs  lib.rs  main.rs  mode.rs  prelude.rs  properties.rs  rotation.rs  size.rs  test_helpers.rs
src/interface/: i2c.rs  mod.rs  spi.rs
src/mode/: buffered_graphics.rs  character.rs  displaymode.rs  graphics.rs  mod.rs  raw.rs  terminal.rs
