[package]
authors = ["James Waples <jamwaffles@gmail.com>"]
categories = ["embedded", "no-std"]
description = "I2C/SPI driver for the SSD1306 OLED display controller"
documentation = "https://docs.rs/ssd1306"
keywords = ["no-std", "ssd1306", "oled", "embedded", "embedded-hal-driver"]
license = "MIT OR Apache-2.0"
name = "ssd1306"
readme = "README.md"
repository = "https://github.com/rust-embedded-community/ssd1306"
version = "0.8.4"
edition = "2021"
exclude = [ "build.rs", "build.sh", "memory.x", "doc", "*.jpg", "*.png", "*.bmp" ]
rust-version = "1.75.0"

[package.metadata.docs.rs]
targets = [ "thumbv7m-none-eabi", "thumbv7em-none-eabihf" ]

[dependencies]
embedded-hal = "1.0.0"
display-interface = "0.5.0"
display-interface-i2c = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics-core = { version = "0.4.0", optional = true }

[dev-dependencies]
embedded-graphics = "0.8.0"

[target.'cfg(target_arch="arm")'.dev-dependencies]
cortex-m = { version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
# Used to load BMP images in various examples
tinybmp = "0.5.0"
# Used by the noise_i2c examples
rand = { version = "0.8.4", default-features = false, features = [ "small_rng" ] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [ "stm32f103c8", "memory-x", "defmt", "exti", "time-driver-tim3" , "unstable-pac"]  }
embassy-time = { version = "0.3.1", git = "https://github.com/embassy-rs/embassy" }
embedded-hal-bus = "0.2.0"

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[profile.dev]
opt-level="s"
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
